--- a/index.html
+++ b/index.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teplet</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <h1>scss</h1>
-</body>
+    <link rel="stylesheet" href="./css/main.min.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="header__container container">
+        <div>
+          <img class="header__images" src="./img/Logo (4).svg" alt="" />
+        </div>
+        <ul class="header__list">
+          <li class="header__itm"><a class="header__link" href="">Home</a></li>
+          <li class="header__itm">
+            <a class="header__link" href="">Service</a>
+          </li>
+          <li class="header__itm">
+            <a class="header__link" href="">Company</a>
+          </li>
+          <li class="header__itm">
+            <a class="header__link" href="">Career</a>
+          </li>
+
+          <li class="header__itm"><a class="header__link" href="">Blog</a></li>
+
+          <li class="header__itm">
+            <a class="header__link" href="">Contact us</a>
+          </li>
+          <li class="header__itm">
+            <a class="header__link" href=""
+              >Clone project
+              <span class=""><img src="./img/Icon.png" alt="" /></span
+            ></a>
+          </li>
+        </ul>
+      </div>
+
+      <hr class="hr" />
+      <nav class="sitenav">
+        <div class="sitenav__container container">
+          <div class="sitenav__div">
+            <h1 class="sitenav__atm">
+              Transform Your Idea Into Reality with Finsweet
+            </h1>
+            <p class="sitenav__title">
+              The entire Finsweet team knows what's good with Webflow and you
+              can too with 1 week and a good attitude.
+            </p>
+          </div>
+          <div class="sitenav__itemes">
+            <img class="sitenav__images" src="./img/Header Image.png" alt="" />
+          </div>
+          <ul class="sitenav__list">
+            <li class="sitenav__item">We've Worked with</li>
+            <li class="sitenav__item">
+              <img src="./img/Logo (3).png" alt="" />
+            </li>
+            <li class="sitenav__item"></li>
+            <li class="sitenav__item"></li>
+            <li class="sitenav__item"></li>
+            <li class="sitenav__item"></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
