--- a/index.html
+++ b/index.html
@@ -54,14 +54,22 @@
             <img class="sitenav__images" src="./img/Header Image.png" alt="" />
           </div>
           <ul class="sitenav__list">
-            <li class="sitenav__item">We've Worked with</li>
+            <p>class="sitenav__item">We've Worked with</p>
             <li class="sitenav__item">
               <img src="./img/Logo (3).png" alt="" />
             </li>
-            <li class="sitenav__item"></li>
-            <li class="sitenav__item"></li>
-            <li class="sitenav__item"></li>
-            <li class="sitenav__item"></li>
+            <li class="sitenav__item">
+              <img src="./img/Logo (5).png" alt="" />
+            </li>
+            <li class="sitenav__item">
+              <img src="./img/Logo (6).png" alt="" />
+            </li>
+            <li class="sitenav__item">
+              <img src="./img/Logo (7).png" alt="" />
+            </li>
+            <li class="sitenav__item">
+              <img src="./img/Logo (8).png" alt="" />
+            </li>
           </ul>
         </div>
       </nav>
